FOF 3.5.2
================================================================================
# [HIGH] Template overrides for module and plugin view templates would not work
# [HIGH] View templates were always loaded from this side of the application, ignoring 'site:' and 'admin:' prefixes

FOF 3.5.1
================================================================================
- Removed Magic Quotes GPC handling since we no longer support PHP 5.3 or earlier
~ FEF Renderer throws deprecated notice in PHP 7.4
~ PHP 7.4 warning when AJAX reordering is not available

FOF 3.5.0
================================================================================
+ Base CLI script, compatible with Joomla! 3.7 and later, Joomla 4.0
~ Minimum requirements increased to PHP 5.6 and Joomla! 3.7

FOF 3.4.7
================================================================================
+ Support for Joomla 4 centralized Download Key management of paid extensions in its Update Sites page

FOF 3.4.6
================================================================================
+ Classic toolbars now correctly support drop-down menus in Joomla 4
~ Updated Assertions mixin
~ Work towards future PHP 7.4 support
# [LOW] FEFHelperSelect::booleanlist would not automatically style the radio list for switch display
# [LOW] Behaviour.Rules would fail when binding a DataModel

FOF 3.4.5
================================================================================
+ Allow FEF Dark Mode to preload the files without applying the class
# [HIGH] IP filtering with CIDR or netmask notation may not work for certain IP address blocks

FOF 3.4.4
================================================================================
+ User action logs with multiple text entries are now allowed
+ In some cases, under CloudFlare, the real IP is only inside the X-CF-Connecting-Ip header, not X-Forwarded-For
+ Blade templates can now be debugged with phpStorm

FOF 3.4.3