@@ -1,5 +1,6 @@
 FOF 3.5.2
 ================================================================================
++ Blade: bust OPcode cache when writing a compiled template file [gh-687]
 # [HIGH] Template overrides for module and plugin view templates would not work
 # [HIGH] View templates were always loaded from this side of the application, ignoring 'site:' and 'admin:' prefixes
 
